Fix: Critter card aligns with featured games

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -244,6 +244,8 @@ a {
     left: 0;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+    margin-top: 50px;
+    margin-bottom: 5px;
 
     & h2 {
         font-size: 2rem;
@@ -254,6 +256,7 @@ a {
     @media screen and (max-width: 1000px) {
         grid-column: 1 / -1;
         grid-row: 1 / 2;
+        margin-top: 5px;
     }
 }
 #critter-background {
